# WebAppManifestRS

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  README.tpl
.github/workflows/: checks.yaml
src/: errors.rs  lib.rs  resources.rs  types.rs
tests/: creating.webmanifest  parsing.webmanifest  tests.rs
